# EigenSol

./: .gitignore  DOCS.md  README.md  cidl.yaml  package.json
components/footer/: footer.tsx  footerStyles.tsx
components/header/: header.tsx  headerMenu.tsx  headerStyles.tsx  headerWallet.tsx
hooks/: contracts.ts
pages/: SolanaWallet.tsx  _app.tsx  _document.tsx  index.tsx  withdraw.tsx
program/: Anchor.toml
program/client/: eigensol.ts
program/programs/eigensol/: Cargo.toml
program/programs/eigensol/src/: lib.rs  state.rs
program/programs/eigensol/src/stubs/: add_AVS.rs  addavs.rs  createtokenpool.rs  initialize.rs  mod.rs  remove_AVS.rs  removeavs.rs  stake.rs  withdraw.rs
program/tests/: eigensol.ts
styles/: global.ts
