
[package]
name = "eigensol"
version = "0.0.1"
description = "The purpose of this contract is to allow staking, withdrawal as well as adding and removing of AVS happened. For this contract, we are going to  target the Solana blockchain. Thus, we define the data structure **PoolInfo** as well as **UserInfo** that will be transpile to a PDA Account  base on the seeds defined in the solana extension. In addition, the contract defines five methods, also known as  instruction."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "eigensol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }